fix : locked content on mobile display

--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -482,6 +482,7 @@ p {
     overflow: hidden;
     cursor: pointer;
     min-height: 500px;
+    max-height: 750px;
     width: 100%;
 
     & .locked-ctn-overlay {
